test_suite/tests/ui/fail/invalid_attr_value_for_subcommand/invalid_subcommand_help.rs
use clapi::macros::*;

#[command]
fn app(){
    #[subcommand(help=1)]
    fn child(){}
}

fn main(){}