test_suite/tests/ui/fail/invalid_attr_value_for_subcommand/invalid_subcommand_help.stderr
error: custom attribute panicked
 --> $DIR/invalid_subcommand_help.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: `help` must be a string literal
